--- a/painel_proprietario.html
+++ b/painel_proprietario.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Gerenciamento de Usuários</title>
+  <title>Gerenciamento de Usuário</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
