--- a/painel_proprietario.html
+++ b/painel_proprietario.html
@@ -193,7 +193,20 @@
               <button onclick="confirmarExclusao('${uid}')">Excluir</button>`;
             
             if (usuario.role === 'professor') {
-              html += `<button onclick="gerenciarTurmas('${uid}')">Gerenciar Turmas</button>`;
+              html += `<button onclick="adicionarTurma('${uid}')">Adicionar Turma</button>
+                       <div id="turmas_${uid}">`;
+              if (usuario.turmas) {
+                for (let turmaId in usuario.turmas) {
+                  const turma = usuario.turmas[turmaId];
+                  html += `<div>
+                              <p>Turma: ${turma.nome_turma}</p>
+                              <p>Quantidade de Alunos: ${turma.numero_alunos}</p>
+                              <button onclick="editarTurma('${uid}', '${turmaId}')">Editar Turma</button>
+                              <button onclick="confirmarExclusaoTurma('${uid}', '${turmaId}')">Excluir Turma</button>
+                            </div>`;
+                }
+              }
+              html += `</div>`;
             }
 
             html += `</div>`;
@@ -204,8 +217,8 @@
       });
     }
 
-    // Função para gerenciar turmas de um professor
-    function gerenciarTurmas(uid) {
+    // Função para adicionar turma a um professor
+    function adicionarTurma(uid) {
       const turmaNome = prompt("Digite o nome da turma:");
       const turmaNumero = prompt("Digite o número de alunos:");
       
@@ -219,6 +232,7 @@
         db.ref('usuarios/' + uid + '/turmas/' + turmaId).set(novaTurma)
           .then(() => {
             alert("Turma adicionada com sucesso!");
+            buscarUsuarios(); // Atualiza a lista de usuários
           })
           .catch(error => {
             console.error("Erro ao adicionar turma:", error);
@@ -238,6 +252,7 @@
         })
         .then(() => {
           alert("Turma atualizada com sucesso!");
+          buscarUsuarios(); // Atualiza a lista de usuários
         })
         .catch(error => {
           console.error("Erro ao atualizar a turma:", error);
@@ -251,6 +266,7 @@
         db.ref('usuarios/' + uid + '/turmas/' + turmaId).remove()
           .then(() => {
             alert("Turma excluída com sucesso.");
+            buscarUsuarios(); // Atualiza a lista de usuários
           })
           .catch(error => {
             console.error("Erro ao excluir turma:", error);
