--- a/painel_proprietario.html
+++ b/painel_proprietario.html
@@ -120,7 +120,7 @@
   <script>
     // Configuração do Firebase
     var firebaseConfig = {
-      apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
+      apiKey: "API_KEY",
       authDomain: "hannahenglishcourse.firebaseapp.com",
       databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app",
       projectId: "hannahenglishcourse",
@@ -211,6 +211,7 @@
 
             if (usuario.role === 'aluno') {
               html += `<button onclick="mostrarProgresso('${uid}')">Progresso</button>`;
+              html += `<button onclick="adicionarNivel('${uid}')">Adicionar Nível</button>`;
             }
 
             html += `</div>`;
@@ -300,7 +301,6 @@
           html += `</ul>`;
         }
 
-        html += `<button onclick="adicionarNivel('${uid}')">Adicionar Nível</button>`;
         document.getElementById('progressoAluno').innerHTML = html;
       });
     }
