--- a/painel_proprietario.html
+++ b/painel_proprietario.html
@@ -74,7 +74,7 @@
       color: red;
       font-weight: bold;
     }
-    #resultados, #progressoAluno {
+    #resultados {
       text-align: left;
       max-width: 600px;
       margin: auto;
