--- a/painel_proprietario.html
+++ b/painel_proprietario.html
@@ -275,6 +275,27 @@
         });
       };
 
+      // Função para cadastrar uma nova turma para o professor
+      window.cadastrarTurma = function(uid) {
+        const nomeTurma = prompt("Nome da turma:");
+        const numeroAlunos = prompt("Número de alunos:");
+        
+        if (nomeTurma && numeroAlunos) {
+          // Cria um ID único para a turma
+          const novaTurmaRef = db.ref(`usuarios/${uid}/turmas`).push();
+          novaTurmaRef.set({
+            nome: nomeTurma,
+            alunos: parseInt(numeroAlunos)
+          }).then(() => {
+            alert("Turma cadastrada com sucesso!");
+            listarTurmas(uid); // Atualiza a lista de turmas após o cadastro
+          }).catch(error => {
+            console.error("Erro ao cadastrar turma:", error);
+            alert("Erro ao cadastrar turma: " + error.message);
+          });
+        }
+      };
+
       // Funções de edição e exclusão de turma
       window.editarTurma = function(uid, turmaId) {
         const nome = prompt("Nome da turma:");
@@ -350,7 +371,6 @@
           }
         });
       };
-
     });
   </script>
 </body>
