--- a/painel_proprietario.html
+++ b/painel_proprietario.html
@@ -10,17 +10,20 @@
       background-color: #f0f8ff;
       color: #333;
       text-align: center;
+      margin: 0;
+      padding: 0;
     }
 
     h1 {
       color: #4CAF50;
       margin-top: 20px;
-      font-size: 32px;
+      font-size: 2em;
+      padding: 10px;
     }
 
     h2 {
       color: #333;
-      font-size: 24px;
+      font-size: 1.5em;
       margin-top: 20px;
     }
 
@@ -58,7 +61,7 @@
       border: none;
       border-radius: 5px;
       cursor: pointer;
-      font-size: 16px;
+      font-size: 1em;
       transition: background-color 0.3s ease;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
     }
@@ -85,6 +88,7 @@
       text-align: left;
       max-width: 600px;
       margin: auto;
+      padding: 10px;
     }
 
     .result-container {
@@ -97,7 +101,7 @@
 
     .result-container h3 {
       color: #4CAF50;
-      font-size: 20px;
+      font-size: 1.25em;
     }
 
     .progresso-container {
@@ -105,6 +109,7 @@
       margin-top: 15px;
       padding: 10px;
       border-top: 1px solid #ddd;
+      font-size: 0.9em;
     }
 
     hr {
@@ -112,6 +117,44 @@
       height: 1px;
       background: #ddd;
       margin: 20px 0;
+    }
+
+    /* Responsividade */
+    @media (max-width: 768px) {
+      h1 {
+        font-size: 1.75em;
+      }
+      h2 {
+        font-size: 1.25em;
+      }
+      button {
+        padding: 10px 16px;
+        font-size: 0.95em;
+      }
+      .result-container, form, .unit-container {
+        max-width: 90%;
+        padding: 15px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      h1 {
+        font-size: 1.5em;
+      }
+      h2 {
+        font-size: 1.1em;
+      }
+      button {
+        padding: 8px 14px;
+        font-size: 0.9em;
+      }
+      .result-container, form, .unit-container {
+        max-width: 95%;
+        padding: 10px;
+      }
+      input[type="email"], input[type="password"], input[type="text"], input[type="tel"], select {
+        padding: 8px;
+      }
     }
   </style>
 </head>
