--- a/painel_professor.html
+++ b/painel_professor.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: 'Poppins', sans-serif;
-      background-image: url('images/fundo.png');
+      background-image: url('imagens/fundo.png');
       background-repeat: repeat;
       color: #333;
       margin: 0;
@@ -130,7 +130,7 @@
       <option value="avatar_professor3.png">Avatar 3</option>
       <option value="avatar_professor4.png">Avatar 4</option>
     </select>
-    <img id="avatar-preview" src="" alt="Avatar Preview" style="width: 100px; height: 100px; margin-top: 10px;">
+    <img id="avatar-preview" src="imagens/avatar_professor1.png" alt="Avatar Preview" style="width: 100px; height: 100px; margin-top: 10px;">
     
     <button onclick="saveTeacherData()">Save Changes</button>
   </div>
@@ -144,14 +144,14 @@
   </div>
 
   <script>
-    // Placeholder functions for handling teacher data
+    // Placeholder function for handling teacher data
     function saveTeacherData() {
       alert('Save Teacher Data - To be implemented');
     }
     
     document.getElementById('teacher-avatar').addEventListener('change', function() {
       const avatar = this.value;
-      document.getElementById('avatar-preview').src = `images/${avatar}`;
+      document.getElementById('avatar-preview').src = `imagens/${avatar}`;
     });
 
     // Placeholder function for classes
