--- a/painel_professor.html
+++ b/painel_professor.html
@@ -126,6 +126,7 @@
   </div>
 
   <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-database.js"></script>
 
   <script>
@@ -143,11 +144,22 @@
 
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
     const db = firebase.database();
 
+    // Authenticate and load teacher data
+    auth.onAuthStateChanged(user => {
+      if (user) {
+        const teacherId = user.uid;
+        loadTeacherData(teacherId);
+      } else {
+        // Redirect to login page if not logged in
+        window.location.href = 'login.html';
+      }
+    });
+
     // Load teacher data
-    function loadTeacherData() {
-      const teacherId = "Fef9wrnzukUcO9nPPvKeWuc3Z12"; // Replace with actual teacher ID
+    function loadTeacherData(teacherId) {
       const teacherRef = db.ref('usuarios/' + teacherId);
 
       teacherRef.once('value', snapshot => {
@@ -161,6 +173,24 @@
 
         // Load classes after loading teacher data
         loadClasses(teacherId);
+      });
+    }
+
+    // Save teacher data
+    function saveTeacherData() {
+      const teacherId = auth.currentUser.uid;
+      const teacherRef = db.ref('usuarios/' + teacherId);
+
+      const updatedData = {
+        nome: document.getElementById('teacher-name').value,
+        telefone: document.getElementById('teacher-phone').value,
+        avatar: document.getElementById('teacher-avatar').value
+      };
+
+      teacherRef.update(updatedData).then(() => {
+        alert("Teacher data saved successfully!");
+      }).catch(error => {
+        console.error("Error updating data:", error);
       });
     }
 
@@ -250,9 +280,6 @@
         });
       });
     }
-
-    // Save teacher data and load classes on page load
-    window.onload = loadTeacherData;
   </script>
 </body>
 </html>
